@@ -33,6 +33,7 @@ A Chrome extension with tools and improvements for Hyperiums 7 (unofficial)
 - Coordinates for moving fleets
 - Count and display number of backup buddy logins
 - Link to forum on "last 20 messages" page (for alliances)
+- Button to drop/enable stasis on military page
 
 ### Additional
 - Simple Fleet Calculator (Accessible via Military menu in game)
