@@ -5,6 +5,7 @@ XXXX-XX-XX XX:XX:XX Version X.X.X
 * Added link to forum on "last 20 messages" page (for alliances)
 * Added sum of Ground AvgP generation to controlled planets summary
 * Added notification for install or update of extension
+* Added button to drop/enable stasis on military page
 
 2013-12-12 20:25:00 Version 0.1.1
 * Bug fixes only
